Was very wrong about that bootstrap css file. It has introduced a few UI bugs but this shouldn’t be too hard to correct. Also added a bit of spacing between the password field and the login button.

--- a/website/app/assets/stylesheets/application.scss
+++ b/website/app/assets/stylesheets/application.scss
@@ -220,3 +220,7 @@ h1{
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff2e6da4', GradientType=0);
   background-repeat: repeat-x;
 }
+
+.login-button-padding {
+  margin-top: 10px;
+}
